Added files to .gitingore

--- a/client_name_mappings.json
+++ b/client_name_mappings.json
@@ -19,7 +19,7 @@
     "302155209018": "Jamie Johnson",
     "302155209019": "Jamie Davis",
     "302155209020": "Riley Brown",
-    "302155209021": "Jamie Brown",
+    "302155209021": "Jamie Browne",
     "302155209022": "Morgan Williams",
     "302155209023": "Taylor Jones",
     "302155209024": "Morgan Garcia",
